updated html file upload

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +32,7 @@
     <article class="NFT-card">
 
       <picture class="NFT-top">
-        <img class="NFT-top__img" src="/images/image-equilibrium.jpg" alt="NFT-top__img">
+        <img class="NFT-top__img" src="images/image-equilibrium.jpg" alt="NFT-top__img">
       </picture>
 
       <div class="NFT-description">
@@ -43,11 +43,11 @@
 
       <div class="flex-group-a">
 
-        <img class="ethereum__img" src="/images/icon-ethereum.svg" alt="ethereum_img">
+        <img class="ethereum__img" src="images/icon-ethereum.svg" alt="ethereum_img">
         <p class="ethereum">0.041 ETH</p>
 
 
-        <img class="clock__img" src="/images/icon-clock.svg" alt="clock_img">
+        <img class="clock__img" src="images/icon-clock.svg" alt="clock_img">
         <p class="clock">3 days left</p>
 
       </div>
@@ -55,7 +55,7 @@
       <hr>
 
       <div class="flex-group-b">
-        <img class="avatar__img" src="/images/image-avatar.png" alt="avatar_img">
+        <img class="avatar__img" src="images/image-avatar.png" alt="avatar_img">
         <p class="creation">Creation of</p>Jules Wyvern
       </div>
 
