Adding active states to updated html and css

--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
     <article class="NFT-card">
 
       <picture class="NFT-top">
-        <img class="NFT-top__img" src="images/image-equilibrium.jpg" alt="NFT-top__img">
+        <div class="NFT-top__img">
+          <img src="images/image-equilibrium.jpg" alt="NFT-top__img">
+        </div>
+        <div class="NFT-top__hover">
+          <img src="images/icon-view.svg" alt="NFT-top__hover">
+        </div>
       </picture>
 
       <div class="NFT-description">
@@ -56,7 +61,8 @@
 
       <div class="flex-group-b">
         <img class="avatar__img" src="images/image-avatar.png" alt="avatar_img">
-        <p class="creation">Creation of</p>Jules Wyvern
+        <p class="creation">Creation of</p>
+        <p class="Jules">Jules Wyvern</p>
       </div>
 
     </article>
